# cortex-lite

./: .gitignore  CLAUDE.md  README.md  biome.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
crates/cortex-engine/: Cargo.toml  package.json
crates/cortex-engine/src/: btsp.rs  consolidator.rs  hash.rs  lib.rs  pruner.rs  scorer.rs  tfidf.rs  tokenizer.rs  types.rs
scripts/: build-native.sh  publish.sh
src/: config.ts  index.ts  native.ts  pipeline.ts  types.ts
src/daemon/: file-tracker.ts  index.ts  session-watcher.ts
src/hooks/: post-tool-result.ts  pre-prompt.ts
src/utils/: context-parser.ts  logger.ts
tests/integration/: daemon.test.ts
tests/unit/: native.test.ts  pipeline.test.ts
